--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,81 @@
+<h1>*ngFor Objects</h1>
+<div>
+  <div *ngFor="let product of products">
+    <img width="250" [src]="product.image" alt="image">
+    <h2>{{ product.price }}</h2>
+    <p>{{ product.name }}</p>
+  </div>
+</div>
+<hr>
+
+<h1>*ngFor reto 1 with objects</h1>
+<p><input type="text" required="true" #itemNameInput="ngModel" [(ngModel)]="newItem.name"/></p>
+<p><input type="number" required="true" #itemPriceInput="ngModel" [(ngModel)]="newItem.price"/></p>
+<p><button (click)="addItem()">Agregar</button></p>
+<ul>
+  <li *ngFor="let item of items; index as i">
+    {{i}} - Producto: {{item.name}} Precio {{item.price}}
+    <button (click)="deleteItem(i)">Eliminar</button>
+  </li>
+  <li *ngIf="items.length === 0">
+    No se encuentran productos
+  </li>
+</ul>
+<hr>
+
+<h1>*ngFor</h1>
+<p><input type="text" required="true" [(ngModel)]="newName"/></p>
+<p><button (click)="addName()" >Add name</button></p>
+<ul>
+  <li *ngFor="let name of names; index as i">
+    {{i}} {{ name }}
+    <button (click)="deleteName(i)">Eliminar</button>
+  </li>
+  <li *ngIf="names.length === 0">
+    No se encuentran nombres
+  </li>
+</ul>
+<hr>
+
+<h1>*ngIf</h1>
+<input type="text" required="true" [(ngModel)]="person.name"/>
+<p *ngIf="person.name === 'Mario' && person.age === 18 else myBlock ">Soy Mario</p>
+<p *ngIf="person.name === 'Miriam'">Soy Miriam</p>
+<ng-template #myBlock>
+  <p>Bloque de else</p>
+</ng-template>
+<hr>
+
+<h1>NgModel</h1>
+  <input type="text" required="true" #nameInput="ngModel" [(ngModel)]="person.name"/>
+  <p>Nombre {{ person.name }}</p>
+  <p>Valid: {{ nameInput.valid }}</p>
+  <input type="number" max="18" min="10" required #ageInput="ngModel" [(ngModel)]="person.age"/>
+  <p>Age {{ person.age }}</p>
+  <p>Valid: {{ ageInput.valid }}</p>
+<hr>
+
+
 <h1>Eventos</h1>
 <button [disabled]="btnDisabled">Enviar</button>
 <button (click)="toggleButton()">Toggle Button</button>
 <p>Edad {{ person.age}}</p>
 <button (click)="incraseAge()">Age ++</button>
+<div class="box" (scroll)="onScroll($event)">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat dignissimos repellendus tempora veritatis exercitationem aliquid, necessitatibus ipsum unde quidem at facilis voluptate temporibus distinctio, et voluptates nihil. Excepturi, neque hic.</p>
+</div>
 <hr>
+
+
 <h1>Propiedades</h1>
 <button [disabled]="btnDisabled">Enviar</button>
-<input type="text" [value]="person.name"/>
+<input type="text" [value]="person.name" (keyup)="changeName($event)"/>
+<p>Nombre {{ person.name }}</p>
 <progress [max]="100" [value]="person.age"></progress>
 <img width="100" [src]="person.avatar" />
 <hr>
+
+
 <h1>Hola Mundo</h1>
 <h2>{{ 'Hola Mundo'.repeat(5) }}</h2>
 <p>3 + 3 = {{ 3 + 3 }}</p>
