--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,51 @@
+<h1>NgClass & NgStyle</h1>
+<input type="text" required #nameInput4="ngModel" [(ngModel)]="person.name" />
+  <hr class="line-error"
+  [ngClass]="{
+    'valid': nameInput4.valid,
+    'invalid':  nameInput4.invalid
+  }"
+  />
+  <p class="message-error" [class.invalid]="nameInput4.invalid">
+    El campo es requerido
+  </p>
+  <div class="styles">
+    <div>
+      <input type="number" [(ngModel)]="box.width" />
+      <input type="number" [(ngModel)]="box.height" />
+      <input type="color" [(ngModel)]="box.background" />
+    </div>
+    <div>
+      <div [ngStyle]="{
+        'width.px': box.width,
+        'height.px': box.height,
+        'background-color': box.background,
+        'display': 'block'
+      }"></div>
+    </div>
+</div>
+<hr>
+
+<h1>Class & Style</h1>
+  <input type="text" required #nameInput2="ngModel" [(ngModel)]="person.name"/>
+  <p class="message-error" [class.invalid]="nameInput2.invalid">
+    El campo es requerido
+  </p>
+  <label>Nombre</label>
+  <input type="text" required #nameInput3="ngModel" [(ngModel)]="person.name"/>
+  <p [style.font-style]="nameInput3.invalid ? 'italic' : 'normal' ">
+    Texto texto texto
+  </p>
+  <div class="styles">
+    <div>
+      <input type="text" [(ngModel)]="widthImg"/>
+    </div>
+    <div>
+      <img [style.width.px]="widthImg" [src]="person.avatar" />
+    </div>
+  </div>
+<hr>
+
 <h1>*ngSwitch</h1>
 <input type="text" required="true" [(ngModel)]="person.name"/>
 <div [ngSwitch]="person.name">
