--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -34,3 +34,29 @@
   }
 }
 
+.message-error {
+  background-color: red;
+  color: white;
+  opacity: 0;
+  transition: all linear .5s;
+  &.invalid {
+    opacity: 1;
+  }
+
+  .styles {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .line-error {
+    height: 0;
+    border-bottom: 1px solid;
+    &.invalid {
+      border-color: red;
+    }
+    &.valid {
+      border-color: green;
+    }
+  }
+}
+
